--- a/app/src/main/res/layout/activity_information_details.xml
+++ b/app/src/main/res/layout/activity_information_details.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
        <TextView
-           android:text="   丢失的小孩 在这里登记丢失的小孩,让更多的好心人看到并一起寻找. 网友提供的线索 在这里可以看到好心人提供的线索,增加寻找的机会. 我们提供资源 我们寻亲平台也会."
+           android:text="   丢失的小孩 在这里登记丢失的小孩,让更多的好心人看到并一起寻找. 网友提供的线索 在这里可以看到好心人提供的线索,增加寻找的机会. "
            android:lineSpacingExtra="10dp"
            android:textColor="@color/Treeblack"
            android:textSize="@dimen/text_size_three"
@@ -55,23 +55,73 @@
             android:layout_height="115dp" />
     </LinearLayout>
     <LinearLayout
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/li_da_chui"
+            android:layout_height="115dp" />
+        <ImageView
+            android:layout_marginLeft="3dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/yi_bo_chen"
+            android:layout_height="115dp" />
+        <ImageView
+            android:layout_marginLeft="3dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/yu_yang_qian_xi"
+            android:layout_height="115dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
-        <ImageView
-            android:layout_marginTop="33dp"
-            android:src="@drawable/location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginLeft="7dp"
-            android:layout_marginTop="33dp"
-            android:text="园区东平街299号欧瑞大厦"
-            android:textColor="@color/Treeblack"
-            android:textSize="@dimen/text_size_three"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="丢失时间："
+                android:textColor="@color/yellowOne"
+                android:textSize="@dimen/text_size_three"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:text="2016/09/27"
+                android:textColor="@color/Treeblack"
+                android:textSize="@dimen/text_size_three"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="丢失地址："
+                android:textColor="@color/yellowOne"
+                android:textSize="@dimen/text_size_three"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:text="江苏省苏州市园区东平街欧瑞大厦附近"
+                android:textColor="@color/Treeblack"
+                android:textSize="@dimen/text_size_three"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 </com.example.administrator.whereareyounow.view.PercentLinearLayout>
