--- a/app/src/main/res/layout/item_help.xml
+++ b/app/src/main/res/layout/item_help.xml
@@ -197,7 +197,7 @@
                         android:gravity="right|bottom">
 
                         <ImageView
-
+                           android:id="@+id/iv_chat"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/chat" />
