--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/grayFive"
-    tools:context="com.example.administrator.whereareyounow.activity.LoginActivity">
+    tools:context="com.example.administrator.whereareyounow.activity.LoginActivity"
+    android:orientation="vertical"
+    android:baselineAligned="false">
     <include
         android:id="@+id/shouye"
         layout="@layout/navigation_bar"
@@ -80,11 +81,19 @@
         android:layout_gravity="center_horizontal"
         android:layout_width="300dp"
         android:layout_height="40dp">
-        <ImageView
+        <!--<ImageView
             android:id="@+id/iv"
             android:src="@drawable/mo_ren"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" />-->
+        <CheckBox
+            android:id="@+id/iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@null"
+            android:drawableLeft="@drawable/mo_ren"
+            android:button="@null" />
         <TextView
             android:layout_toRightOf="@+id/iv"
             android:layout_marginLeft="5dp"
