--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -3,21 +3,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_background"
-    android:background="@drawable/guide1"
+    android:background="@drawable/guide3"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="注册"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="@dimen/text_size_one"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/edittext_guide_white"
+            android:layout_width="260dp"
+            android:layout_height="50dp" />
+        <TextView
+            android:text="登录"
+            android:textColor="@color/yellowOne"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:textSize="@dimen/text_size_one"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerInParent="true"
+            android:background="@drawable/edittext_guide_yellow"
+            android:layout_width="260dp"
+            android:layout_height="50dp" />
+    </LinearLayout>
     <TextView
-        android:id="@+id/fragment_text"
-        android:layout_width="166dp"
-        android:layout_height="32dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"
-        android:gravity="center"
-        android:text="立即进入"
-        android:textColor="@android:color/white"
-        android:background="@color/white"
-        android:textSize="14sp"
-        android:visibility="gone"
-        />
-
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_one"
+        android:text="先看看>>"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
