--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -1,44 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_background"
-    android:background="@drawable/guide3"
-    >
+    android:background="@drawable/guide1">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
+
         <TextView
-            android:text="注册"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:textSize="@dimen/text_size_one"
+            android:id="@+id/signin"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/edittext_guide_white"
-            android:layout_width="260dp"
-            android:layout_height="50dp" />
+            android:gravity="center"
+            android:text="注册"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_one"
+            android:visibility="gone" />
+
         <TextView
+            android:id="@+id/login"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/edittext_guide_yellow"
+            android:gravity="center"
             android:text="登录"
             android:textColor="@color/yellowOne"
-            android:layout_marginTop="50dp"
-            android:gravity="center"
             android:textSize="@dimen/text_size_one"
-            android:layout_gravity="center_horizontal"
-            android:layout_centerInParent="true"
-            android:background="@drawable/edittext_guide_yellow"
-            android:layout_width="260dp"
-            android:layout_height="50dp" />
+            android:visibility="gone" />
     </LinearLayout>
+
     <TextView
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentRight="true"
+        android:id="@+id/see_intent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:text="先看看>>"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_one"
-        android:text="先看看>>"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:visibility="gone" />
 </RelativeLayout>
